[gd_scene load_steps=2 format=3 uid="uid://b4r2dk6p2a0hi"]

[ext_resource type="Script" path="res://user_login.gd" id="1_0o3xj"]

[node name="UserLogin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o3xj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PROJETO ALLY - LOGIN"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ServerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Servidor: 127.0.0.1:8765"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Usuário:"

[node name="UsernameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite seu usuário"

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Senha:"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Digite sua senha"
secret = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Entrar"

[node name="RegisterButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Registrar"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Digite suas credenciais"
horizontal_alignment = 1